W 17464266.code coverage (#1019)
* W-17464266: Enable jacoco code coverage and bump up coverage above 80%